<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangled_back"
    android:fitsSystemWindows="true"
    tools:context=".Login_or_Reg">


   <ImageView
       android:id="@+id/loginbackgr"
       android:layout_width="320dp"
       android:layout_height="483dp"
       android:layout_marginStart="30dp"
       android:layout_marginTop="80dp"
       android:layout_marginEnd="30dp"
       android:layout_marginBottom="55dp"
       android:alpha="0.4"

       android:scaleType="fitXY"
       app:layout_constraintBottom_toTopOf="@+id/signupbackgr"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/rectangled"
       app:tint="@color/white" />

   <ImageView
       android:id="@+id/signupbackgr"
       android:layout_width="320dp"
       android:layout_height="130dp"
       android:layout_marginTop="80dp"
       android:alpha="0.4"
       android:scaleType="fitXY"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.489"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.976"
       app:srcCompat="@drawable/rectangled"
       app:tint="@color/white" />

   <TextView
       android:id="@+id/signup"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="send2signup"
       android:text="@string/signup"
       android:textAlignment="center"
       android:textColor="#2196F3"
       app:layout_constraintBottom_toBottomOf="@+id/signupbackgr"
       app:layout_constraintEnd_toEndOf="@+id/signupbackgr"
       app:layout_constraintStart_toStartOf="@+id/signupbackgr"
       app:layout_constraintTop_toTopOf="@+id/signupbackgr"
       app:layout_constraintVertical_bias="0.17" />

   <Button
       android:id="@+id/singup_btn"
       android:layout_width="305dp"
       android:layout_height="42dp"
       android:layout_marginTop="16dp"
       android:background="@drawable/rectangled"
       android:onClick="send2signup"
       android:text="@string/register"
       app:backgroundTint="#044d8c"
       android:textColor="@color/white"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="@+id/signupbackgr"
       app:layout_constraintStart_toStartOf="@+id/signupbackgr"
       app:layout_constraintTop_toBottomOf="@+id/signup"
       app:layout_constraintVertical_bias="0.0" />

   <EditText
       android:id="@+id/email_logreg"
       android:layout_width="270dp"
       android:layout_height="wrap_content"
       android:ems="10"
       android:inputType="textPersonName"

       android:textColor="@color/black"

       android:textColorHint="@color/contrast"
       app:layout_constraintBottom_toTopOf="@+id/password"
       app:layout_constraintEnd_toEndOf="@+id/loginbackgr"
       app:layout_constraintHorizontal_bias="0.506"
       app:layout_constraintStart_toStartOf="@+id/loginbackgr"
       app:layout_constraintTop_toTopOf="@+id/loginbackgr"
       app:layout_constraintVertical_bias="0.409" />

   <EditText
       android:id="@+id/password"
       android:layout_width="270dp"
       android:layout_height="wrap_content"
       android:layout_marginBottom="140dp"
       android:ems="10"
       android:inputType="textPassword"
       android:textColor="@color/black"
       android:textColorHint="@color/contrast"
       app:layout_constraintBottom_toBottomOf="@+id/loginbackgr"
       app:layout_constraintEnd_toEndOf="@+id/loginbackgr"
       app:layout_constraintHorizontal_bias="0.506"
       app:layout_constraintStart_toStartOf="@+id/loginbackgr" />

   <Button
       android:id="@+id/login"
       android:layout_width="305dp"
       android:layout_height="42dp"
       android:background="@drawable/rectangled"
       android:onClick="loginClick"
       android:text="@string/login"
       android:textColor="@color/white"
       app:backgroundTint="#044d8c"
       app:layout_constraintBottom_toBottomOf="@+id/loginbackgr"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/password"
       app:layout_constraintVertical_bias="0.653" />

   <TextView
       android:id="@+id/emailtxtstudent"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="30dp"
       android:layout_marginBottom="20dp"
       android:text="@string/email"
       android:textColor="@color/black"
       app:layout_constraintBottom_toTopOf="@+id/email_logreg"
       app:layout_constraintStart_toStartOf="@+id/loginbackgr" />

   <TextView
       android:id="@+id/passtxtstudent"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="30dp"
       android:layout_marginBottom="20dp"
       android:text="@string/password"
       android:textColor="@color/black"
       app:layout_constraintBottom_toTopOf="@+id/password"
       app:layout_constraintStart_toStartOf="@+id/loginbackgr" />

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="5dp"
       android:layout_marginTop="60dp"
       android:layout_marginBottom="40dp"
       android:text="@string/app_name"
       android:textColor="#FFFFFF"
       android:textSize="30sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toTopOf="@+id/loginbackgr"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.25"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/textView14"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="80dp"
       android:text="@string/register"
       android:textColor="#FFFFFF"
       android:textSize="14sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="@+id/singup_btn"
       app:layout_constraintEnd_toEndOf="@+id/singup_btn"
       app:layout_constraintHorizontal_bias="0.502"
       app:layout_constraintStart_toStartOf="@+id/singup_btn"
       app:layout_constraintTop_toTopOf="@+id/signupbackgr"
       app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>