<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/rectangled_back"
    android:alpha="0.95"
    tools:context=".Fragment_student">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="345dp"
                android:layout_height="568dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="15dp"
                android:alpha="0.4"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rectangled"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/backdown"
                android:layout_width="345dp"
                android:layout_height="131dp"
                android:layout_marginTop="10dp"
                android:alpha="0.4"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back"
                app:layout_constraintVertical_bias="0.196"
                app:srcCompat="@drawable/rectangled"
                app:tint="@color/white" />

            <EditText
                android:id="@+id/email_admin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_admin" />

            <EditText
                android:id="@+id/username_admin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fname_admin" />

            <EditText
                android:id="@+id/fname_admin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawableLeft="@drawable/ic_baseline_face_24"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/back"
                app:layout_constraintStart_toStartOf="@+id/back"
                app:layout_constraintTop_toTopOf="@+id/back" />

            <EditText
                android:id="@+id/pass_admin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_baseline_password_24"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_admin" />

            <EditText
                android:id="@+id/pass_conf_admin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_baseline_password_24"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_admin" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="294dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/admin_reg"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.161"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/fullname"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/fname_admin"
                app:layout_constraintEnd_toEndOf="@+id/back"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toStartOf="@+id/back" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/username_admin"
                app:layout_constraintEnd_toEndOf="@+id/back"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="@+id/back" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/email_admin"
                app:layout_constraintEnd_toEndOf="@+id/back"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="@+id/back" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/pass_admin"
                app:layout_constraintEnd_toEndOf="@+id/back"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintStart_toStartOf="@+id/back" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_conf"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/pass_conf_admin"
                app:layout_constraintEnd_toEndOf="@+id/back"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="@+id/back" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/go2login"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="@+id/backdown"
                app:layout_constraintStart_toStartOf="@+id/backdown"
                app:layout_constraintTop_toTopOf="@+id/backdown" />


            <Button
                android:id="@+id/login_btn"
                android:layout_width="305dp"
                android:layout_height="44dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rectangled"
                android:text="@string/login"
                android:textColor="@color/white"
                app:backgroundTint="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/backdown"
                app:layout_constraintEnd_toEndOf="@+id/backdown"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="@+id/backdown" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_baseline_arrow_forward_24"
                app:backgroundTint="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/back"
                app:layout_constraintEnd_toEndOf="@+id/back"
                app:layout_constraintTop_toBottomOf="@+id/pass_conf_admin"
                app:layout_constraintVertical_bias="1.0"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toStartOf="@+id/back" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="72dp"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="@+id/back"
                app:layout_constraintEnd_toEndOf="@+id/back"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="@+id/back"
                app:layout_constraintTop_toBottomOf="@+id/pass_conf_admin"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>