<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/rectangled_back"
    android:alpha="0.95"
    tools:context=".Register">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/back"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:alpha="0.4"

        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/settings_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/rectangled"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/email_st2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#3C3C3C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_st2" />

    <EditText
        android:id="@+id/username_st2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#3C3C3C"
        app:layout_constraintEnd_toEndOf="@id/back"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@id/back"
        app:layout_constraintTop_toBottomOf="@+id/fname_st2" />

    <EditText
        android:id="@+id/fname_st2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_baseline_face_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#3C3C3C"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <EditText
        android:id="@+id/pass_st2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_baseline_password_24"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#3C3C3C"
        app:layout_constraintEnd_toEndOf="@id/back"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@id/back"
        app:layout_constraintTop_toBottomOf="@+id/email_st2" />

    <EditText
        android:id="@+id/pass_conf_st2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_baseline_password_24"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#3C3C3C"
        app:layout_constraintEnd_toEndOf="@id/back"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@id/back"
        app:layout_constraintTop_toBottomOf="@+id/pass_st2" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/fname_st2"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="@+id/back" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/username_st2"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="@+id/back" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/email_st2"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@+id/back" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/pass_st2"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="@+id/back" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_conf"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/pass_conf_st2"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="@+id/back" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settings_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:backgroundTint="#044d8c"
        app:layout_constraintEnd_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/pass_conf_st2"
        app:tint="@color/white" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/settings_menu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bottombar"
        app:elevation="20dp"
        app:itemIconSize="25dp"
        app:itemIconTint="@drawable/items_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottombar_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>